packages/bastest/tests/cli/snapshots/snapshot_test__cli_reads_snapshots_with_crlf_frontmatter.snap
---
source: tests/cli/snapshot_test.ts
---
status: 0
stdout:
  
  src/snapshot_test.ts
    records value ... ok (<duration>)
  
  ok | 1 passed | 0 failed | 0 ignored (<duration>)
stderr:
  <empty>
