packages/bastest/tests/cli/snapshots/snapshot_test__cli_writes_pending_snapshots_and_accepts_them.snap
---
source: tests/cli/snapshot_test.ts
---
status: 1
stdout:
  
  src/snapshot_test.ts
    records value ... fail (<duration>)
      AssertionError: snapshot mismatch
  snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__records_value.snap
  pending: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__records_value.snap.new
  
        actual
          "{\n  \"name\": \"bastest\",\n  \"marker\": \"import.meta.test\",\n  \"ok\": true\n}\n"
        expected
          ""
  
      snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__records_value.snap
    duplicate name ... fail (<duration>)
      AssertionError: snapshot mismatch
  snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__duplicate_name.snap
  pending: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__duplicate_name.snap.new
  
        actual
          "{\n  \"duplicate\": 1\n}\n"
        expected
          ""
  
      snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__duplicate_name.snap
    duplicate name ... fail (<duration>)
      AssertionError: snapshot mismatch
  snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__duplicate_name__2.snap
  pending: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__duplicate_name__2.snap.new
  
        actual
          "{\n  \"duplicate\": 2\n}\n"
        expected
          ""
  
      snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__duplicate_name__2.snap
  
  fail | 0 passed | 3 failed | 0 ignored (<duration>)
stderr:
  <empty>
